--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: design_system
+name: mayjuun_design_system
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
